Refatora features com entidades internas, APIs públicas e exclusões transacionais